argocd/base/bookinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  labels:
    istio-injection: enabled
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
